<resources>
    <string name="app_name">FootStat</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">FootStat</string>
    <string name="second_fragment_label">Insert Match</string>
    <string name="show_stats_fragment_label">Show Stats</string>
    <string name="list_of_matches_label">List Of Matches</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="insert_match_textview">Insert Match</string>
    <string name="enter_stats_textview">"Please enter the\nfollowing stats:"</string>
    <string name="enter_button_text">Enter</string>
    <string name="welcome">Welcome to FootStat!</string>
    <string name="match_dif">Match Difficulty (1 – 5)</string>
    <string name="match_dif_show_stats">"Match\nDifficulty"</string>
    <string name="goals">Goals</string>
    <string name="sort_by_foot">Sort by Foot</string>
    <string name="sort_by_side">Sort by Side</string>
    <string name="sort_by_match_dif">Sort by Match Difficulty<br />(Goals &amp; Assists)</string>
    <string name="penalties">Penalties</string>
    <string name="r_goals">Right Foot Goals</string>
    <string name="l_goals">Left Foot Goals</string>
    <string name="h_goals">Goals Scored by a Header/Other</string>
    <string name="assists">Assists</string>
    <string name="r_penalties_made">Penalties Made to the Goal\'s Right Side</string>
    <string name="l_penalties_made">Penalties Made to the Goal\'s Left Side</string>
    <string name="r_penalties_missed">Penalties Missed to the Goal\'s Right Side</string>
    <string name="l_penalties_missed">Penalties Missed to the Goal\'s Left Side</string>
    <string name="choose_stats">Please choose which stats<br /> you\'d like to see:</string>
    <string name="show_totals">Show Totals</string>
    <string name="show_averages">"Show Average\nPer Match"</string>
    <string name="show_stats">Show stats</string>
    <string name="no_settings">There are no settings</string>
    <string name="home">Home</string>
    <string name="_1">      1      </string>
    <string name="_2">      2      </string>
    <string name="_3">      3      </string>
    <string name="_4">      4      </string>
    <string name="_5">      5      </string>
    <string name="total">Total</string>
    <string name="goals_right">"Goals:\nRight"</string>
    <string name="goals_left">"Goals:\nLeft"</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="header_other">"Goals:\nHeader/Other"</string>
    <string name="made">Made</string>
    <string name="missed">Missed</string>
    <string name="int_holder">%d</string>
    <string name="float_holder">%.2f</string>
    <string name="match_added">Match added successfully!</string>
    <string name="select_date">Select Date</string>
    <string name="date_holder">%04d%02d%02d</string>
    <string name="please_choose_date">Please choose the match date</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="date_hint">dd/MM/yyyy</string>
    <string name="date_hint_holder">%02d/%02d/%04d</string>
    <string name="num_of_matches_table">"Number of\nMatches"</string>
    <string name="num_of_matches_check_box">Number of Matches</string>
    <string name="date_list">Date</string>
    <string name="pen_made_right">"Penalties\nMade Right"</string>
    <string name="pen_made_left">"Penalties\nMade Left"</string>
    <string name="pen_missed_right">"Penalties\nMissed Right"</string>
    <string name="pen_missed_left">"Penalties\nMissed Left"</string>
    <string name="id_text">ID</string>
    <string name="list_of_matches">List of Matches</string>
    <string name="delete">Delete</string>
</resources>