<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.statsapp.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_ShowStatsFragment"
            app:destination="@id/showStatsFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_insertMatchFragment"
            app:destination="@id/insertMatchFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_listOfMatchesFragment"
            app:destination="@id/listOfMatchesFragment" />
    </fragment>
    <fragment
        android:id="@+id/showStatsFragment"
        android:name="com.example.statsapp.ShowStatsFragment"
        android:label="@string/show_stats_fragment_label"
        tools:layout="@layout/fragment_show_stats" >
        <action
            android:id="@+id/action_showStatsFragment_to_showStatsContFragment"
            app:destination="@id/showStatsContFragment" />
    </fragment>
    <fragment
        android:id="@+id/showStatsContFragment"
        android:name="com.example.statsapp.ShowStatsContFragment"
        android:label="@string/show_stats_fragment_label"
        tools:layout="@layout/fragment_show_stats_cont" >
        <action
            android:id="@+id/action_showStatsContFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <argument
            android:name="checks"
            app:argType="boolean[]" />
        <argument
            android:name="dateFrom"
            app:argType="string" />
        <argument android:name="dateTo"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/insertMatchFragment"
        android:name="com.example.statsapp.insertMatchFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_insert_match" >
        <action
            android:id="@+id/action_insertMatchFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/listOfMatchesFragment"
        android:name="com.example.statsapp.ListOfMatchesFragment"
        android:label="@string/list_of_matches_label">
        <action
            android:id="@+id/action_listOfMatchesFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>